# temusproject7

./: .gitignore  README.md  pyproject.toml
project7/: app.py  requirements.txt  research.py
project7/envpath/: guide.md
project7/saved_pages/: d077678a-aff4-40ed-ac89-7a0d44d511f2.html
project7/static/: script.js  style.css  styles.css
project7/templates/: base.html  index.html  saved_output.html
temusproj/: apikey.env  graph.ipynb  main.py  research.py  state.py
torun/: app.py  research.py
torun/static/: script.js
torun/templates/: base.html  index.html
